// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config-metadata generateConnectionsConfig should allow for call without custom params 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig should allow for custom DVNs in the metadata 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "29EKzmCscUg8mf4f5uskwMqvu2SXM8hKF1gWi1cCBoKT",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "29EKzmCscUg8mf4f5uskwMqvu2SXM8hKF1gWi1cCBoKT",
          ],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig should generate the connections config for a given set of pathways 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig supports NIL_CONFIRMATIONS 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 18446744073709551615n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 18446744073709551615n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 18446744073709551615n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 18446744073709551615n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig supports passing no required DVNs and no optional DVNs 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig supports using block send library for A to B 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x0c77d8d771ab35e2e184e7ce127f19ced31ff8c0",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "2XrYqmhBMPJgDsb4SVbjV1PnJBprurd5bzRCkHwiFCJB",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig supports using block send library for both A to B and B to A 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x0c77d8d771ab35e2e184e7ce127f19ced31ff8c0",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x0c77d8d771ab35e2e184e7ce127f19ced31ff8c0",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "2XrYqmhBMPJgDsb4SVbjV1PnJBprurd5bzRCkHwiFCJB",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "sendLibrary": "2XrYqmhBMPJgDsb4SVbjV1PnJBprurd5bzRCkHwiFCJB",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata generateConnectionsConfig uses NIL_DVN_COUNT when no required DVNs are provided 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 1,
          "optionalDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
            "0xdbec329a5e6d7fb0113eb0a098750d2afd61e9ae",
          ],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 1,
          "optionalDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
            "0xdbec329a5e6d7fb0113eb0a098750d2afd61e9ae",
          ],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 1,
          "optionalDVNs": [
            "29EKzmCscUg8mf4f5uskwMqvu2SXM8hKF1gWi1cCBoKT",
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 1,
          "optionalDVNs": [
            "29EKzmCscUg8mf4f5uskwMqvu2SXM8hKF1gWi1cCBoKT",
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
          "requiredDVNCount": 255,
          "requiredDVNs": [],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;

exports[`config-metadata translatePathwayToConfig should be able to translate a pathway to a config 1`] = `
[
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "0x819F0FAF2cb1Fba15b9cB24c9A2BDaDb0f895daf",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "0xa7BFA9D51032F82D649A501B6a1f922FC2f7d4e3",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "0x9f0e79aeb198750f963b6f30b99d87c6ee5a0467",
          ],
        },
      },
      "sendLibrary": "0x69BF5f48d2072DfeBc670A1D19dff91D0F4E8170",
    },
    "from": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
    "to": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
  },
  {
    "config": {
      "enforcedOptions": undefined,
      "receiveConfig": {
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "receiveLibraryConfig": {
        "gracePeriod": 0n,
        "receiveLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
      },
      "sendConfig": {
        "executorConfig": {
          "executor": "AwrbHeCyniXaQhiJZkLhgWdUCteeWSGaSN1sTfLiY7xK",
          "maxMessageSize": 10000,
        },
        "ulnConfig": {
          "confirmations": 1n,
          "optionalDVNThreshold": 0,
          "optionalDVNs": [],
          "requiredDVNCount": 1,
          "requiredDVNs": [
            "4VDjp6XQaxoZf5RGwiPU9NR1EXSZn2TP4ATMmiSzLfhb",
          ],
        },
      },
      "sendLibrary": "7a4WjyR8VZ7yZz5XJAKm39BUGn5iT9CKcv2pmG9tdXVH",
    },
    "from": {
      "address": "HBTWw2VKNLuDBjg9e5dArxo5axJRX8csCEBcCo3CFdAy",
      "eid": 40168,
    },
    "to": {
      "contractName": "MyOFT",
      "eid": 40106,
    },
  },
]
`;
